--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,3 +20,19 @@
     align-items: center;
     border-radius: 9px;
 }
+
+.post-enter {
+    opacity: 0;
+  }
+.post-enter-active {
+    opacity: 1;
+    transition: opacity 550ms ease-in;
+  }
+.post-exit {
+    opacity: 1;
+  }
+.post-exit-active {
+    opacity: 0;
+    transition: opacity 550ms ease-in;
+  }
+  
