--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,3 +36,18 @@
     transition: opacity 550ms ease-in;
   }
   
+  .page__wrapper{
+    margin-top: 30px;
+    display: flex;
+  }
+  .page{
+padding: 10px;
+border: 1px solid rgb(163, 5, 5);
+cursor: pointer;
+border-radius: 6px;
+  }
+
+  .page__current{
+    border: 2px solid rgb(46, 14, 253);
+    font-weight: bold;
+  }
