--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@
 
 #root{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .App{
     width: 800px;
@@ -51,3 +52,16 @@ border-radius: 6px;
     border: 2px solid rgb(46, 14, 253);
     font-weight: bold;
   }
+ 
+.navbar{
+height: 50px;
+width: 100vw;
+display: flex;
+align-items: center;
+padding: 0 15px;
+background: lightgrey;
+}
+
+.navbar__links{
+  margin-right: auto;
+}
