add new functionality

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,6 +21,9 @@
     align-items: center;
     border-radius: 9px;
 }
+.post__btns{
+  display: flex;
+}
 
 .post-enter {
     opacity: 0;
@@ -60,6 +63,7 @@ display: flex;
 align-items: center;
 padding: 0 15px;
 background: lightgrey;
+justify-content:space-between;
 }
 
 .navbar__links{
